Initialise the website to make it work on localhost:1313

--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = "https://michaelneuper.github.io/hugo-texify3/"
+baseURL = "http://localhost:1313"
 disqusShortname = ""
 enableGitInfo = true
 enableRobotsTXT = true
