--- a/hugo.toml
+++ b/hugo.toml
@@ -16,7 +16,7 @@ tags = "tags"
 categories = "categories"
 
 [params]
-title="Melchior THIERRY"
+title="Melchior Thierry"
 author = "Melchior THIERRY"
 description = "TeXify3 - A LaTeX-style hugo theme with the gruvbox color scheme for personal blogging"
 footnote = """
@@ -54,20 +54,7 @@ numberedSubtitles = true
   """
 
   [params.buymeacoffee]
-  code = """
-  <script async data-name="BMC-Widget" 
-        data-cfasync="true" 
-        src="https://cdnjs.buymeacoffee.com/1.0.0/widget.prod.min.js" 
-        data-id="michaelneuper" 
-        data-description="Like what I do? Buy me a coffee!" 
-        data-message="" 
-        data-color="#d79921" 
-        data-position="Right" 
-        data-x_margin="18" 
-        data-y_margin="18"
-        crossorigin="anonymous">
-  </script>
-  """
+  code = """"""
 
   [params.sharingbuttons]
   facebook = true
