--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,4 @@
 [submodule "themes/hugo-texify3"]
 	path = themes/hugo-texify3
 	url = https://github.com/o-Melchior-o/hugo-texify3
+	branch = master
