changing url in config file

--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = "https://melchiorthierry.netlify.app/"
+baseURL = "https://fantastic-crepe-7b6ea4.netlify.app/"
 disqusShortname = ""
 enableGitInfo = true
 enableRobotsTXT = true
