--- a/netlify.toml
+++ b/netlify.toml
@@ -6,7 +6,7 @@ command = """\
   tar -xf dart-sass-1.63.6-linux-x64.tar.gz && \
   rm dart-sass-1.63.6-linux-x64.tar.gz && \
   export PATH=/opt/build/repo/dart-sass:$PATH && \
-  hugo --gc --minify
+  hugo --gc --minify --source hugo/mywebsite
 """
 
 [context.production.environment]
