--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = "https://fantastic-crepe-7b6ea4.netlify.app/"
+baseURL = "https://melchiorthierryfr.netlify.app/"
 disqusShortname = ""
 enableGitInfo = true
 enableRobotsTXT = true
@@ -6,7 +6,7 @@ hasCJKLanguage = true
 languageCode = "en"
 rssLimit = 10
 theme = "hugo-texify3"
-title = "TeXify3"
+title = "Melchior Thierry"
 
 [pagination]
 pagerSize = 5
